// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UploadButton /> Check displaing enabled button 1`] = `
<UploadButton
  file=""
  fileUrl="fileUrl"
  flags={Object {}}
  inputHandler={[Function]}
>
  <DisabledUploadButton>
    <div
      className="catalog-settings-content__upload-button catalog-settings-content__upload-button_disabled"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToolTip
        isShow={false}
        text="Remove URL to manually add CSV file"
      />
      <span
        className="catalog-settings-content__upload-button-icon"
      />
      <span>
        Upload file
      </span>
    </div>
  </DisabledUploadButton>
</UploadButton>
`;

exports[`<UploadButton /> Check displaing remove button 1`] = `
<UploadButton
  file={
    Object {
      "name": "test",
    }
  }
  fileUrl="fileUrl"
  flags={Object {}}
  inputHandler={[Function]}
>
  <UploadButtonRemove
    inputHandler={[Function]}
    text="test"
  >
    <div
      className="catalog-settings-content__remove-upload-button"
    >
      <span>
        test
      </span>
      <span
        className="catalog-settings-content__upload-button-remove-icon"
        onClick={[Function]}
      />
    </div>
  </UploadButtonRemove>
</UploadButton>
`;
